--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Dialogs Lab</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dialog_fire_missiles">Fire Missiles!!</string>
+    <string name="fire">Fire</string>
+    <string name="cancel">Cancel</string>
+    <string name="text_fire_missiles">LAUNCH FIRE MISSILES</string>
+
+    <!-- buttons -->
 </resources>
