--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="dialog_fire_missiles">Fire Missiles!!</string>
     <string name="fire">Fire</string>
     <string name="cancel">Cancel</string>
     <string name="text_fire_missiles">LAUNCH FIRE MISSILES</string>
+
+
     <string name="pick_color">Pick a Color</string>
     <array name="colors_array">
         <item name="red">Red</item>
@@ -14,4 +17,13 @@
         <item name="blue">Blue</item>
     </array>
     <string name="launch_colors">Launch Colors</string>
+
+    <string name="pick_toppings">Pick Toppings</string>
+    <array name="toppings_array">
+        <item name="pepperoni">Pepperoni</item>
+        <item name="Mushrooms">Mushrooms</item>
+        <item name="peppers">Peppers</item>
+    </array>
+    <string name="ok">OK</string>
+    <string name="launch_multi_dialog">Launch Multiple Dialog</string>
 </resources>
