--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,5 @@
     <string name="signin">Sign In</string>
     <string name="launch_custom_dialog">Launch Custom Dialog</string>
 
-    <string name="dialog_too_many_toppings">Too Many Toppings, Scale It Back Turbo!</string>
+    <string name="dialog_too_many_toppings">Scale It Back Turbo!</string>
 </resources>
